fix documentation create new user delete a purchase
