# api/user.go
@@ -19,16 +19,24 @@ type CreateUserRequest struct {
 	Lastname  string `json:"lastname" binding:"required"`
 	Password  string `json:"password" binding:"required,min=6"`
 }
+type CreateUserResponse struct {
+	Message    string                      `json:"message"`
+	Data       internal.CreateUserTxResult `json:"data"`
+	StatusCode int                         `json:"status_code"`
+}
+
+
 
 // GetUser godoc
-// @Summary      Get a user
-// @Description  get user by ID
+// @Summary      Create New User of App
+// @Description  Creating New User which never existed before
 // @Tags         users
 // @Accept       json
 // @Produce      json
-// @Param        id   path      int  true  "User ID"
-// @Success      200  {object}  map[string]string
-// @Router       /users/createTx [post]
+// @Param        request body CreateUserRequest true 	"request for creating new user"
+// @Success      200 {object} CreateUserResponse 		"reponse if success creating new user"
+// @Failure 	 400 {object} ErrorResponse "Bad Request"
+// @Router       /users/create [post]
 func (server *Server) CreateUser(c *gin.Context) {
 
 	ctx := c.Request.Context()
@@ -40,7 +48,7 @@ func (server *Server) CreateUser(c *gin.Context) {
 
 	var req CreateUserRequest
 	if err := c.ShouldBindJSON(&req); err != nil {
-		c.JSON(http.StatusBadRequest, errorResponse(err))
+		c.JSON(http.StatusBadRequest, errorResponse(err, http.StatusBadRequest))
 		return
 	}
 
@@ -65,13 +73,26 @@ func (server *Server) CreateUser(c *gin.Context) {
 		// catch err from db driver
 		// catch err from defined deadline context
 		if errors.Is(err, context.DeadlineExceeded) || errors.Is(ctx.Err(), context.DeadlineExceeded) {
-			c.JSON(http.StatusGatewayTimeout, errorResponse(err))
+			c.JSON(http.StatusGatewayTimeout, errorResponse(err, http.StatusGatewayTimeout))
 			return
 		}
-		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		c.JSON(http.StatusBadRequest, errorResponse(err, http.StatusBadRequest))
 		return
 	}
 
-	c.JSON(http.StatusOK, users)
+	respSuccess := successResponse(
+		"success create new user",
+		internal.CreateUserTxResult{
+			// embedded struct
+			Users: internal.Users{
+				Username:  users.Username,
+				Email:     users.Email,
+				Firstname: users.Firstname,
+				Lastname:  users.Lastname,
+			},
+		},
+		http.StatusAccepted,
+	)
+	c.JSON(http.StatusOK, respSuccess)
 
 }
