# cmd/app/docs/swagger.json
@@ -15,10 +15,10 @@
         },
         "version": "1.0"
     },
-    "host": "localhost:8080",
-    "basePath": "/api/v1",
+    "host": "localhost:8000",
+    "basePath": "/",
     "paths": {
-        "/purchase/createTx": {
+        "/purchase/create": {
             "post": {
                 "description": "Create a new Purchase for detail",
                 "consumes": [
@@ -53,7 +53,45 @@
                 }
             }
         },
-        "/users/createTx": {
+        "/purchase/delete/{id}": {
+            "delete": {
+                "description": "Deletion proccess can only be done if it is not completed",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "purchase"
+                ],
+                "summary": "Delete Purchase",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "purchase ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success delete purchase",
+                        "schema": {
+                            "$ref": "#/definitions/api.DeletePurchaseSuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/create": {
             "post": {
                 "description": "Creating New User which never existed before",
                 "consumes": [
@@ -81,7 +119,7 @@
                     "200": {
                         "description": "reponse if success creating new user",
                         "schema": {
-                            "$ref": "#/definitions/api.CreateUserTxResult"
+                            "$ref": "#/definitions/api.CreateUserResponse"
                         }
                     },
                     "400": {
@@ -123,7 +161,49 @@
                 }
             }
         },
-        "api.CreateUserTxResult": {
+        "api.CreateUserResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/internal.CreateUserTxResult"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.DeletePurchaseSuccessResponse": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/internal.DeletePurchaseItemsTxParams"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status_code": {
+                    "type": "integer",
+                    "example": 200
+                }
+            }
+        },
+        "api.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "invalid request body"
+                },
+                "status_code": {
+                    "type": "integer",
+                    "example": 400
+                }
+            }
+        },
+        "internal.CreateUserTxResult": {
             "type": "object",
             "properties": {
                 "email": {
@@ -135,21 +215,19 @@
                 "lastname": {
                     "type": "string"
                 },
+                "password_history_count": {
+                    "type": "string"
+                },
                 "username": {
                     "type": "string"
                 }
             }
         },
-        "api.ErrorResponse": {
+        "internal.DeletePurchaseItemsTxParams": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer",
-                    "example": 400
-                },
-                "error": {
-                    "type": "string",
-                    "example": "invalid request body"
+                "purchase_number": {
+                    "type": "string"
                 }
             }
         }
